fix card-body property to text-align center

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -368,7 +368,7 @@ footer {
 /*--------------------------------------------------------- News Articles */
 
 .card-body {
-    text-align: left;
+    text-align: center;
 }
 
 .hidden {
